--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Yevgen32.github.io/react-search-app",
   "name": "test",
   "version": "0.1.0",
   "private": true,
@@ -34,6 +35,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "tsc": "tsc --noEmit",
